# CRDT-memory

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.prod.yml  docker-compose.yml
api/: .dockerignore  Dockerfile  main.py  pyproject.toml
api/models/: request.py  response.py
api/routers/: events.py  nodes.py  query.py  swarm.py
api/services/: embedding.py  pccm_client.py  stream_processor.py  ws_hub.py
api/tests/: test_events.py  test_query.py
core/: .dockerignore  Cargo.toml  Dockerfile  build.rs
core/proto/: pccm.proto
core/src/: lib.rs  main.rs
core/src/activation/: base_level.rs  decay_worker.rs  inhibition.rs  mod.rs  spreading.rs
core/src/embed/: hnsw.rs  mod.rs
core/src/graph/: crdt.rs  edge.rs  mod.rs  node.rs  store.rs
core/src/sync/: delta.rs  gossip.rs  mod.rs  vector_clock.rs
core/tests/: activation_math.rs  crdt_convergence.rs  spreading_integration.rs
deploy/nginx/: nginx.conf
mcp/: Dockerfile  pyproject.toml  server.py
mcp/tools/: chain.py  query.py  store.py  swarm.py
ui/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src/api/: client.ts  ws.ts
ui/src/components/activation/: ActivationStepper.tsx  FormulaDisplay.tsx  ScoreTimeline.tsx
ui/src/components/benchmark/: BenchmarkTable.tsx  MetricBars.tsx
ui/src/components/graph/: EdgeLegend.tsx  MemoryGraph.tsx  NodeCard.tsx
ui/src/components/layout/: Header.tsx  Sidebar.tsx  TabBar.tsx
ui/src/components/swarm/: AgentOrbs.tsx  EventLog.tsx  SwarmStats.tsx
ui/src/store/: pccm.ts
ui/src/types/: pccm.ts
