[project]
name = "pccm-api"
version = "0.1.0"
description = "PCCM API Service — FastAPI REST + WebSocket service"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "grpcio>=1.64.0",
    "grpcio-tools>=1.64.0",
    "redis>=5.0.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
