[package]
name = "pccm-core"
version = "0.1.0"
edition = "2021"
authors = ["PCCM Authors"]
license = "MIT"
description = "PCCM Core Engine — CRDT graph + ACT-R activation + gRPC daemon"

[[bin]]
name = "pccm-core"
path = "src/main.rs"

[lib]
name = "pccm_core"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2.0.0-rc.3"

# IDs
uuid = { version = "1", features = ["v4"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# SQLite persistence
rusqlite = { version = "0.31", features = ["bundled", "vtab", "array"] }

# HNSW vector index
instant-distance = "0.6"

# WebSocket (for gossip)
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
parking_lot = "0.12"
dashmap = "5"
priority-queue = "1"

[build-dependencies]
tonic-build = "0.11"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
