[project]
name = "pccm-mcp"
version = "0.1.0"
description = "PCCM MCP Server — Model Context Protocol tools for AI agents"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
